--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- headers section -->
 
     <header>
-        <div class="p-5 flex-wrap sticky  top-0">
+        <div class="p-5 flex-wrap">
             <span class="text-2xl font-mono text-purple-900 ">Oli.Dev</span>
             <div class="navlinks flex justify-evenly items-center">
             <ul class="list-none flex gap-8">
@@ -52,7 +52,7 @@
     <section>
     <div class="skill max-w-[600px] mx-auto mt-20 px-4 ">
 
-        <div class="p-2 text-center sticky top-0">
+        <div class="p-2 text-center">
             <h1 class="text-2xl text-purple-900 font-mono">Skills</h1>
             <p class="text-2xl text-purple-900">What I can do</p>
         </div>
@@ -109,7 +109,7 @@
                      <!--    contact section -->
 
  <section>
-    <div class="text-center mt-65 sticky top-0">
+    <div class="text-center mt-65">
         <h1 class="text-4xl font-awesome text-purple-900 mt-10">CONTACT</h1>
         <p class="m-13 text-4xl font-mono">Get in Touch</p>
     </div>
